# Buckland_PGAIBE

./: .gitignore  CMakeLists.txt  README.md  notes.md
src/Buckland_Chapter2-State-Machines/WestWorld1/: CMakeLists.txt  MinerOwnedStates.cpp
src/Buckland_Chapter2-State-Machines/WestWorldWithMessaging/: CMakeLists.txt
src/Buckland_Chapter2-State-Machines/WestWorldWithWoman/: CMakeLists.txt
src/Buckland_Chapter3-Steering-Behaviors/: CMakeLists.txt  ParamLoader.h
src/Buckland_Chapter4-SimpleSoccer/: CMakeLists.txt  ParamLoader.h  params_ini_dir.h.in
src/Buckland_Chapter5-Pathfinder/: CMakeLists.txt  main.cpp
src/Buckland_Chapter6-Scripting-Source/: notes.md
src/Buckland_Chapter6-Scripting-Source/CreatingClasses/luabridge/: CMakeLists.txt  main.cpp
src/Buckland_Chapter6-Scripting-Source/ExposingCPPClasses/luabridge/: CMakeLists.txt  main.cpp
src/Buckland_Chapter6-Scripting-Source/ExposingCPPFunctionsToLua/: CMakeLists.txt
src/Buckland_Chapter6-Scripting-Source/ExposingCPPFunctionsToLua/luabridge/: CMakeLists.txt  main.cpp
src/Buckland_Chapter6-Scripting-Source/ExposingCPPFunctionsToLua/luacpp11/: main.cpp
src/Buckland_Chapter6-Scripting-Source/StartHere/: CMakeLists.txt  main.cpp
src/Buckland_Chapter6-Scripting-Source/cpp_using_lua/: CMakeLists.txt  main.cpp  this_dir.h.in
src/Buckland_Chapter6-Scripting-Source/lua_using_cpp/: CMakeLists.txt  RockPaperScissors.h  main.cpp
src/Buckland_Chapter7_to_10-Raven/: CMakeLists.txt
src/Buckland_Chapter7_to_10-Raven/goals/: Goal_FindTarget.cpp  Goal_MoveToItem.cpp  Goal_MoveToItem.h
src/Common/2D/: CMakeLists.txt
src/Common/Debug/: CMakeLists.txt
src/Common/Game/: CMakeLists.txt
src/Common/Messaging/: CMakeLists.txt
src/Common/Time/: CMakeLists.txt
src/Common/lua-5.3.5/: CMakeLists.txt
src/Common/misc/: CMakeLists.txt
src/Common/script/: Scriptor.h
src/Common/sol/: README.md  forward.hpp
