cmake_minimum_required(VERSION 3.0)

include_directories(${CMAKE_SOURCE_DIR}/src/Common)

add_subdirectory(src/Common/Time)
add_subdirectory(src/Common/Misc)
add_subdirectory(src/Common/2D)
add_subdirectory(src/Common/Debug)
add_subdirectory(src/Common/Messaging)
add_subdirectory(src/Common/Game)
add_subdirectory(src/Common/lua-5.3.5)
add_subdirectory(src/Buckland_Chapter2-State-Machines/WestWorld1)
add_subdirectory(src/Buckland_Chapter2-State-Machines/WestWorldWithWoman)
add_subdirectory(src/Buckland_Chapter2-State-Machines/WestWorldWithMessaging)
add_subdirectory(src/Buckland_Chapter3-Steering-Behaviors)
add_subdirectory(src/Buckland_Chapter4-SimpleSoccer)
add_subdirectory(src/Buckland_Chapter5-Pathfinder)
add_subdirectory(src/Buckland_Chapter6-Scripting-Source/StartHere)
add_subdirectory(src/Buckland_Chapter6-Scripting-Source/cpp_using_lua)
add_subdirectory(src/Buckland_Chapter6-Scripting-Source/lua_using_cpp)
#add_subdirectory(src/Buckland_Chapter6-Scripting-Source/ExposingCPPFunctionsToLua/luabind)
add_subdirectory(src/Buckland_Chapter6-Scripting-Source/ExposingCPPFunctionsToLua/luabridge)
#add_subdirectory(src/Buckland_Chapter6-Scripting-Source/ExposingCPPFunctionsToLua/luacpp11)
#add_subdirectory(src/Buckland_Chapter6-Scripting-Source/ExposingCPPClasses/luabind)
add_subdirectory(src/Buckland_Chapter6-Scripting-Source/ExposingCPPClasses/luabridge)
#add_subdirectory(src/Buckland_Chapter6-Scripting-Source/ExposingCPPClasses/luacpp11)
#add_subdirectory(src/Buckland_Chapter6-Scripting-Source/CreatingClasses/luabind)
add_subdirectory(src/Buckland_Chapter6-Scripting-Source/CreatingClasses/luabridge)
#add_subdirectory(src/Buckland_Chapter6-Scripting-Source/CreatingClasses/luacpp11)
#add_subdirectory(src/Buckland_Chapter7_to_10-Raven/)

