project(7-to-10-Raven)
set(SOURCE
armory/Projectile_Bolt.cpp
armory/Projectile_Bolt.h
armory/Projectile_Pellet.cpp
armory/Projectile_Pellet.h
armory/Projectile_Rocket.cpp
armory/Projectile_Rocket.h
armory/Projectile_Slug.cpp
armory/Projectile_Slug.h
armory/Raven_Projectile.cpp
armory/Raven_Projectile.h
armory/Raven_Weapon.cpp
armory/Raven_Weapon.h
armory/Weapon_Blaster.cpp
armory/Weapon_Blaster.h
armory/Weapon_RailGun.cpp
armory/Weapon_RailGun.h
armory/Weapon_RocketLauncher.cpp
armory/Weapon_RocketLauncher.h
armory/Weapon_ShotGun.cpp
armory/Weapon_ShotGun.h
constants.h
goals/AttackTargetGoal_Evaluator.cpp
goals/AttackTargetGoal_Evaluator.h
goals/ExploreGoal_Evaluator.cpp
goals/ExploreGoal_Evaluator.h
goals/GetHealthGoal_Evaluator.cpp
goals/GetHealthGoal_Evaluator.h
goals/GetWeaponGoal_Evaluator.cpp
goals/GetWeaponGoal_Evaluator.h
goals/Goal_AdjustRange.cpp
goals/Goal_AdjustRange.h
goals/Goal_AttackTarget.cpp
goals/Goal_AttackTarget.h
goals/Goal_DodgeSideToSide.cpp
goals/Goal_DodgeSideToSide.h
goals/Goal_Evaluator.h
goals/Goal_Explore.cpp
goals/Goal_Explore.h
goals/Goal_FindTarget.cpp
goals/Goal_FindTarget.h
goals/Goal_FollowPath.cpp
goals/Goal_FollowPath.h
goals/Goal_GetItem.cpp
goals/Goal_GetItem.h
goals/Goal_HuntTarget.cpp
goals/Goal_HuntTarget.h
goals/Goal_MoveToItem.cpp
goals/Goal_MoveToItem.h
goals/Goal_MoveToPosition.cpp
goals/Goal_MoveToPosition.h
goals/Goal_NegotiateDoor.cpp
goals/Goal_NegotiateDoor.h
goals/Goal_SayPhrase.cpp
goals/Goal_SeekToPosition.cpp
goals/Goal_SeekToPosition.h
goals/Goal_Think.cpp
goals/Goal_Think.h
goals/Goal_TraverseEdge.cpp
goals/Goal_TraverseEdge.h
goals/Goal_Wander.cpp
goals/Goal_Wander.h
goals/Raven_Feature.cpp
goals/Raven_Feature.h
goals/Raven_Goal_Types.cpp
goals/Raven_Goal_Types.h
goals/resource.h
goals/Script1.rc
GraveMarkers.cpp
GraveMarkers.h
lua/Raven_Scriptor.cpp
lua/Raven_Scriptor.h
main.cpp
navigation/PathEdge.h
navigation/PathManager.h
navigation/PathTarget.h
navigation/Raven_PathPlanner.cpp
navigation/Raven_PathPlanner.h
navigation/SearchTerminationPolicies.h
navigation/TimeSlicedGraphAlgorithms.h
Params.lua
Raven_Bot.cpp
Raven_Bot.h
Raven_Door.cpp
Raven_Door.h
Raven_Game.cpp
Raven_Game.h
Raven_Map.cpp
Raven_Map.h
Raven_Messages.h
Raven_ObjectEnumerations.h
Raven_SensoryMemory.cpp
Raven_SensoryMemory.h
Raven_SteeringBehaviors.cpp
Raven_SteeringBehaviors.h
Raven_Target.h
Raven_TargetingSystem.cpp
Raven_TargetingSystem.h
Raven_UserOptions.cpp
Raven_UserOptions.h
Raven_WeaponSystem.cpp
Raven_WeaponSystem.h
resource.h
Script1.rc
this_dir.h
this_dir.h.in
triggers/Trigger_HealthGiver.cpp
triggers/Trigger_HealthGiver.h
triggers/Trigger_OnButtonSendMsg.h
triggers/Trigger_SoundNotify.cpp
triggers/Trigger_SoundNotify.h
triggers/Trigger_WeaponGiver.cpp
triggers/Trigger_WeaponGiver.h
)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/this_dir.h.in ${CMAKE_CURRENT_SOURCE_DIR}/this_dir.h)

add_executable(${PROJECT_NAME} WIN32 ${SOURCE})
target_link_libraries(${PROJECT_NAME} Common_Timer Common_Misc Common_2D Common_DebugConsole Common_Messaging Common_Game lua-5.3.5)
